--- a/frontend/src/Design/Header.scss
+++ b/frontend/src/Design/Header.scss
@@ -1,5 +1,3 @@
-
-
 @mixin breakpoint($point) {
     @if $point == md {
         // 768px
@@ -8,16 +6,19 @@
         }
     }
 }
-        
-        .header {
-            background: rgb(32, 32, 32);
-            width: 100%;
-            height: 100px;
-            padding: 0 1.5rem;
-            @include breakpoint(md) {
-                padding: 0 3rem;
-            }
-            transition: 0.3s ease all;
+
+.header 
+{
+    background: black;
+    width: 100%;
+    height: 100px;
+    padding: 0 1.5rem;
+    
+    @include breakpoint(md) 
+    {
+        padding: 0 3rem;
+    }
+        transition: 0.3s ease all;
         
             &__content {
                 overflow: hidden;
@@ -109,26 +110,26 @@
                         border-radius: 12px;
                         font-size: 1rem;
                         font-family: inherit;
-                        background: rgb(162, 162, 246);
-                        color: rgb(32, 32, 32);
+                        background: #c51d1d;
+                        color: white;
                         border: 1px solid transparent;
                         transition: 0.3s ease all;
                         margin:0.50em 0.50em;
                        
         
                         &:hover {
-                            border-color: rgb(162, 162, 246);
-                            background: rgba(rgb(162, 162, 246), 0.1);
-                            color: rgb(162, 162, 246);
+                            border-color: rgb(32, 32, 32);
+                            background:  rgb(32, 32, 32);
+                            color: white(162, 162, 246);
                         }
                         &:active {
-                            border-color: rgb(162, 162, 246);
-                            background: linear-gradient(rgba(rgb(162, 162, 246), 0.2), rgba(rgb(162, 162, 246), 0.3));
-                            color: rgb(162, 162, 246);
+                            border-color: none;
+                            background: none;
+                            color: white;
                         }
                         &__login{
                             
-                            background-color: rgb(32, 32, 32);
+                            background-color: #c51d1d;
                             color:#fff;
 
                         }
