--- a/frontend/src/Design/App.css
+++ b/frontend/src/Design/App.css
@@ -47,7 +47,7 @@ nav {
 
 #login_btn,
 #view_btn {
-  background-color: #febd69;
+  background-color: black;
   padding: 0.4rem 1.8rem;
   font-family: calibri;
 }
