--- a/frontend/src/Design/Profile.css
+++ b/frontend/src/Design/Profile.css
@@ -9,7 +9,7 @@
  background-color: black !important;
  border: none !important;
  margin: 10px !important;
- width: 200px;
+ /* width: 200px; */
 }
 
 #profbutton:hover
