--- a/frontend/src/Design/App.css
+++ b/frontend/src/Design/App.css
@@ -161,7 +161,7 @@ footer {
 }
 
 .rating-outer::before {
-  content: '1 2 3 4 5'; 
+  content: '\1F614 \1F613 \1F610 \1F642 \1F604'; 
   font-size: 20px;
 }
 
@@ -183,11 +183,12 @@ footer {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 0, 0, 0.3);
+  background-color: rgba(128, 0, 0, 0.3);
+
 }
 
 .rating-inner::before {
-  content: '\2585\2585\2585\2585\2585';
+  content: '\2500\2500\2500\2500\2500';
   color: transparent;
   font-size: 20px;
 }
@@ -686,8 +687,8 @@ ul.CTAs a {
   align-items: center;
 }
 
-.grey {
-  color: grey;
+.black {
+  color: black;
 }
 
 .red {
