--- a/frontend/src/Design/App.css
+++ b/frontend/src/Design/App.css
@@ -110,7 +110,8 @@ nav {
 #no_of_reviews {
   font-size: 0.85rem;
   color: grey;
-  margin-left: 0.5rem;
+  /* margin-left: 0.5rem; */
+  text-align: center;
 }
 
 /* Footer */
@@ -204,12 +205,43 @@ footer {
   font-weight: bold;
 }
 
-#cart_btn,
+/* #cart_btn,
 #review_btn {
   border-radius: 2rem;
-  background-color: #fa9c23;
+  color: white;
+  background-color: black;
   border: none;
   padding: 0.5rem 2rem;
+}
+
+#review_btn:hover
+{
+    color: white;
+    background-color: #c51d1d;
+} */
+
+
+#review_btn {
+  color: white !important;
+  background-color: black !important;
+  padding: 0.5rem 2rem;
+}
+
+#review_btn:hover
+{
+    color: white !important;
+    background-color: #c51d1d !important;
+}
+
+#cart_btn {
+  color: white !important;
+  background-color: black !important;
+  padding: 0.5rem 2rem;
+}
+
+#cart_btn:hover {
+  color: white !important;
+  background-color: #c51d1d !important;
 }
 
 #product_seller {
@@ -292,11 +324,17 @@ footer {
 
 #checkout_btn,
 .review-btn {
-  background-color: #fa9c23;
-  border-color: #fa9c23;
+  background-color: black;
+  border-color: black;
   margin-top: 2rem;
   border-radius: 5rem;
 }
+
+.review-btn:hover {
+  color: white;
+  background-color: #c51d1d;
+}
+
 
 #view_order_details {
   background-color: #fa9c23;
@@ -323,6 +361,15 @@ footer {
 .plus,
 .minus {
   padding: 0.1rem 0.5rem;
+  color: white;
+  background-color: #c51d1d;
+}
+
+.plus:hover,
+.minus:hover {
+  padding: 0.1rem 0.5rem;
+  color: white;
+  background-color: black;
 }
 
 .stockCounter input::-webkit-outer-spin-button,
@@ -707,22 +754,12 @@ ul.CTAs a {
   color: white;
 }
 
-.no-indent {
-  margin-left: 0;
+.yes-indent {
+  margin-left: 47%;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 30px;
 }
-
+/* 
 .review-card {
   margin-left: 40px;
-}
-
-#review_btn
-{
-    color: white;
-    background-color: black;
-}
-
-#review_btn:hover
-{
-    color: white;
-    background-color: #c51d1d;
-}
+} */
